--- a/style/scheme-picker.css
+++ b/style/scheme-picker.css
@@ -30,3 +30,28 @@
 #scheme-type > option {
     font-family: 'Raleway', sans-serif;
 }
+
+p.popup {
+    color: rgb(67, 207, 231);
+    position: relative;
+    cursor: pointer;
+}
+
+p.popup:after {
+        content: attr(data-popuptext);
+        color: black;
+        background: white;
+        width: 30vw;
+        border-radius: 3px;
+        opacity: 0;
+        top: 0;
+        left: 1;
+        position: absolute;
+        transition: 1s ease;
+}
+
+p.popup:hover:after {
+        opacity: 1;
+        top: 1.2em;
+        padding: .5em;
+    }
